# ancore

./: .gitignore  .prettierignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RFC.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
.husky/: README.md  pre-commit  pre-push
apps/: .gitkeep
contracts/: Cargo.toml  README.md
contracts/account/: Cargo.toml  README.md
contracts/account/src/: lib.rs
contracts/account/test_snapshots/test/: test_add_session_key.1.json  test_double_initialize.1.json  test_initialize.1.json
docs/: GETTING_STARTED.md
docs/architecture/: OVERVIEW.md
docs/rfcs/: 0000-template.md
services/: .gitkeep
