[package]
name = "ancore-account"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level.workspace = true
overflow-checks.workspace = true
debug.workspace = true
strip.workspace = true
debug-assertions.workspace = true
panic.workspace = true
codegen-units.workspace = true
lto.workspace = true

[profile.release-with-logs]
inherits.workspace = true
debug-assertions.workspace = true
